bug: solves homepage overflow problem

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -64,7 +64,7 @@ body {
 }
 
 #upload-container {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
